--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "gatsby-plugin-sharp": "^2.13.2",
     "gatsby-source-filesystem": "^2.10.0",
     "gatsby-transformer-sharp": "^2.11.0",
+    "postprocessing": "^6.20.3",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "three": "^0.125.2"
   },
   "devDependencies": {
     "prettier": "2.2.1"
